--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,17 @@ name: Generate Snake
 
 # Controls when the action will run.
 on:
+  # Run every 12 hours
   schedule:
-      # every 12 hours
     - cron: "0 */12 * * *"
 
-  # This command allows us to run the Action automatically from the Actions tab.
+  # Allow manual triggers from the Actions tab
   workflow_dispatch:
-  
-  # Also run on every push on the master branch
+
+  # Also run on every push on the main branch
   push:
     branches:
-    - main
+      - main
 
 # The sequence of runs in this workflow:
 jobs:
